<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainwidget"
    style="@style/Widget.KITWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:theme="@style/Theme.KITWidget.AppWidgetContainer">

    <ImageView
        android:id="@+id/backOfMainW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/widgetround" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/separator0"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/evob"
        android:text="@string/column1"
        android:textAlignment="center"
        android:textColor="@color/second_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/separator1"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/evob"
        android:text="@string/column2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:textColor="@color/second_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/evob"
        android:text="@string/column3"
        android:textAlignment="center"
        android:textColor="@color/second_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/separator2"
        android:fontFamily="@font/evob"
        android:text="@string/column4"
        android:textAlignment="center"
        android:textColor="@color/second_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/evob"
        android:text="@string/column5"
        android:textAlignment="center"
        android:layout_marginTop="1dp"
        android:textColor="@color/second_color"
        android:textSize="14sp" />


    <ImageView
        android:id="@+id/separator0"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_above="@+id/textView1"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:src="@drawable/wroundseparator" />

    <ImageView
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_above="@+id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:src="@drawable/wroundseparator" />

    <ImageView
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:src="@drawable/wroundseparator" />

    <ImageView
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:src="@drawable/wroundseparator" />


</RelativeLayout>